--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -165,3 +165,68 @@ textarea::placeholder {
   color: orange;
   border-color: orange;
 }
+
+#bao_cao_main table {
+  text-align: center;
+}
+#bao_cao_main table th,
+#bao_cao_main table td {
+  padding: 0.5rem;
+}
+#bao_cao_main table th:first-child,
+#bao_cao_main table td:first-child {
+  text-align: left;
+}
+#bao_cao_main table th:last-child,
+#bao_cao_main table td:last-child {
+  text-align: right;
+}
+#bao_cao_main table thead,
+#bao_cao_main table tfoot {
+  border-bottom: 1px solid rgb(243, 244, 246);
+}
+#bao_cao_main table tbody tr {
+  border-bottom: 1px solid rgb(243, 244, 246);
+}
+
+.slider {
+  background-color: rgba(255, 255, 255, 0.168627451);
+  border-radius: 100px;
+  padding: 1px;
+  margin: 10px;
+  cursor: pointer;
+  transition: box-shadow 0.2s cubic-bezier(0.4, 0, 0.2, 1) 0s;
+  align-items: center;
+  position: relative;
+  display: block;
+  width: 51px;
+  height: 29px;
+  box-shadow: rgba(0, 0, 0, 0.62) 0px 0px 5px inset, rgba(0, 0, 0, 0.21) 0px 0px 0px 24px inset, #22cc3f 0px 0px 0px 0px inset, rgba(224, 224, 224, 0.45) 0px 1px 0px 0px;
+}
+
+.slider::after {
+  content: "";
+  display: flex;
+  top: 2.3px;
+  left: 2px;
+  width: 26px;
+  height: 26px;
+  background-color: #e3e3e3;
+  border-radius: 200px;
+  position: absolute;
+  box-shadow: transparent 0px 0px 0px 2px, rgba(0, 0, 0, 0.3) 0px 6px 6px;
+  transition: left 300ms cubic-bezier(0.4, 0, 0.2, 1) 0s, background-color 300ms cubic-bezier(0.4, 0, 0.2, 1) 0s;
+  will-change: left, background-color;
+}
+
+.switch input[type=checkbox]:checked + .slider {
+  box-shadow: rgba(0, 0, 0, 0.62) 0px 0px 5px inset, #22cc3f 0px 0px 0px 2px inset, #22cc3f 0px 0px 0px 24px inset, rgba(224, 224, 224, 0.45) 0px 1px 0px 0px;
+}
+
+.switch input[type=checkbox]:checked + .slider::after {
+  left: 24px;
+}
+
+.switch input[type=checkbox] {
+  display: none;
+}
